// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly on home route 1`] = `
.c0 {
  margin-top: 3rem;
  margin-bottom: 4rem;
}

.c1 {
  background: none;
  font-family: 'Oswald',sans-serif;
  font-size: 2.7rem;
  color: #1982C4;
  text-shadow: 0px .5rem .5rem rgba(0,0,0,0.6);
  text-transform: uppercase;
  font-size: 7rem;
  text-shadow: 0px 1rem 1rem rgba(0,0,0,0.6);
  text-align: center;
  margin: 1rem 0;
}

.c2 {
  font-size: 2.7rem;
  text-align: center;
  width: 30rem;
  margin: 0 auto;
  font-weight: 400;
  font-family: 'Oswald',sans-serif;
  color: #757575;
}

.c3 {
  color: #1982C4;
}

<header
  className="c0"
>
  <h1
    className="c1"
  >
    Taboo!
  </h1>
  <h3
    className="c2"
  >
    The team game that’s all about what you
     
    <span
      className="c3"
    >
      say,
    </span>
     and what you
     
    <span
      className="c3"
    >
      don’t!
    </span>
  </h3>
</header>
`;

exports[`Header renders correctly when not on home route 1`] = `
.c0 {
  margin-top: 2rem;
  margin-bottom: 3rem;
}

.c1 {
  background: none;
  font-family: 'Oswald',sans-serif;
  font-size: 2.7rem;
  color: #1982C4;
  text-shadow: 0px .5rem .5rem rgba(0,0,0,0.6);
  text-transform: uppercase;
}

<header
  className="c0"
>
  <h1
    className="c1"
  >
    Taboo!
  </h1>
</header>
`;

exports[`Subheading renders correctly 1`] = `
.c0 {
  font-size: 2.7rem;
  text-align: center;
  width: 30rem;
  margin: 0 auto;
  font-weight: 400;
  font-family: 'Oswald',sans-serif;
  color: #757575;
}

<h3
  className="c0"
/>
`;

exports[`Title renders correctly when large 1`] = `
.c0 {
  background: none;
  font-family: 'Oswald',sans-serif;
  font-size: 2.7rem;
  color: #1982C4;
  text-shadow: 0px .5rem .5rem rgba(0,0,0,0.6);
  text-transform: uppercase;
  font-size: 7rem;
  text-shadow: 0px 1rem 1rem rgba(0,0,0,0.6);
  text-align: center;
  margin: 1rem 0;
}

<h1
  className="c0"
/>
`;

exports[`Title renders correctly when small 1`] = `
.c0 {
  background: none;
  font-family: 'Oswald',sans-serif;
  font-size: 2.7rem;
  color: #1982C4;
  text-shadow: 0px .5rem .5rem rgba(0,0,0,0.6);
  text-transform: uppercase;
}

<h1
  className="c0"
/>
`;
